fix ugly webkit scrollbars *breathes sigh of relief*

--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,8 @@ body {
     color: white;
   }
 }
+
+::-webkit-scrollbar-button:vertical:start:increment,
+::-webkit-scrollbar-button:vertical:end:decrement {
+  display: none;
+}
